--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,8 @@ dependencies {
 
     implementation 'com.github.orangegangsters:swipy:1.2.3@aar'
 
+    //Paging
+    implementation 'androidx.paging:paging-runtime:2.1.0'
+
 
 }
